<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frameLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/backbg" >

    <FrameLayout
        android:id="@+id/framelayout_mark"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/login_mark" >

        <LinearLayout
            android:id="@+id/linearLayouttop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingTop="25.0dip" >

            <TextView
                android:id="@+id/login_imagelogin"
                style="@style/title"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5.0dip"
                android:text="@string/title_login" />

            <RelativeLayout
                android:id="@+id/RelativeLayout_username"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/login_textview_height" >

                <TextView
                    android:id="@+id/login_image_account"
                    style="@style/edittext_name_height_fill"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="50.0dip"
                    android:gravity="center"
                    android:text="@string/user" />

                <EditText
                    android:id="@+id/login_edit_userName"
                    style="@style/edit_text"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="3.0dip"
                    android:layout_marginRight="60.0dip"
                    android:layout_toRightOf="@+id/login_image_account"
                    android:hint="@string/userInputTips"
                    android:inputType="text"
                    android:maxLength="64"
                    android:singleLine="true" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RelativeLayout_password"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/login_textview_height"
                android:layout_marginTop="10.0dip" >

                <TextView
                    android:id="@+id/login_user_psw"
                    style="@style/edittext_name_height_fill"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="50.0dip"
                    android:gravity="center"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/login_edit_password"
                    style="@style/edit_text"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="3.0dip"
                    android:layout_marginRight="60.0dip"
                    android:layout_toRightOf="@+id/login_user_psw"
                    android:hint="@string/passwordInputTips"
                    android:inputType="textPassword" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/login_relative_checkbox"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/login_textview_height" >

                <CheckBox
                    android:id="@+id/login_checkBox_remenberPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="50.0dip"
                    android:button="@drawable/checkbox_button"
                    android:text="@string/remenberPassword"
                    android:textColor="@color/edit_text"
                    android:textSize="@dimen/normal_text_size" />

                <CheckBox
                    android:id="@+id/login_checkBox_autoLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10.0dip"
                    android:layout_toRightOf="@+id/login_checkBox_remenberPassword"
                    android:button="@drawable/checkbox_button"
                    android:text="@string/autoLogIn"
                    android:textColor="@color/edit_text"
                    android:textSize="@dimen/normal_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="60.0dip"
                android:layout_marginLeft="40.0dip"
                android:layout_marginRight="60.0dip" >

                <Button
                    android:id="@+id/login_button_register"
                    style="@style/button_normal"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/register" />

                <Button
                    android:id="@+id/login_button_logIn"
                    style="@style/button_normal"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:onClick="onLogin"
                    android:text="@string/login" />

            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>

    <Button
        android:id="@+id/login_forget_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:padding="10.0dip"
        android:text="@string/forget_password"
        android:textColor="#ffff0000"
        android:textSize="20.0sp" />

</RelativeLayout>